# arctic-monitoring-v2

./: .env.example  .gitignore  README.md  UV_SETUP.md  docker-compose.yml
backend/: AI_MODELS_INTEGRATION_COMPLETE.md  AI_MODELS_OVERVIEW.md  AI_MODELS_TEST_RESULTS.md  Dockerfile  GETTING_HIGH_RES_IMAGES.md  ML_TRAINING_GUIDE.md  ML_TRAINING_SUMMARY.md  QUICKSTART_UV.md  SATELLITE_DATA_SOURCES.md  alembic.ini  ingest_now.py  init_db.py  pyproject.toml  requirements.txt  setup_uv.sh  test_ml_api.py  test_upstream.py
backend/alembic/: env.py
backend/alembic/versions/: 6adfb8301658_add_ingestion_tables.py
backend/app/: __init__.py  config.py  database.py  main.py  main.py.bak  redis_client.py
backend/app/api/: auth.py  changes.py  historical.py  ice_classification.py  ice_concentration.py  ice_stats.py  permafrost.py  predictions.py  routing.py  satellite.py
backend/app/ingestion/: __init__.py  base.py  bremen.py
backend/app/ml/: __init__.py  architectures.py  change_detector.py  ice_classifier.py  ice_predictor.py  model_loader.py
backend/app/models/: __init__.py  ice_data.py  ice_motion.py  ice_thickness.py  ingestion.py  permafrost.py  prediction.py  sea_ice_extent.py  tile.py  user.py  vessel_route.py
backend/app/satellite/: __init__.py  maxar.py  planet_labs.py  processor.py  radarsat.py  sentinel.py
backend/app/schemas/: __init__.py  api_response.py  ice.py  prediction.py  user.py
backend/app/services/: __init__.py  auth_service.py  data_ingestion.py  ice_analysis.py  mock_data.py  permafrost_service.py  prediction_service.py  routing_service.py
backend/app/utils/: __init__.py  auth.py  cache.py  geospatial.py  tiles.py
backend/ml-models/: QUICKSTART.md  README.md  requirements.txt  test_models.py  train_all.py  train_all.sh
backend/ml-models/data/: download_arctic_data.py  preprocessing.py
backend/ml-models/data/labeled_ice_imagery/: manifest.json
backend/ml-models/data/labeled_ice_imagery/labels/: sentinel1_sample_0000_label.npy
backend/ml-models/data/labeled_ice_imagery/metadata/: sentinel1_sample_0000.json  sentinel1_sample_0001.json  sentinel1_sample_0002.json  sentinel1_sample_0003.json  sentinel1_sample_0004.json  sentinel1_sample_0005.json  sentinel1_sample_0006.json  sentinel1_sample_0007.json  sentinel1_sample_0008.json  sentinel1_sample_0009.json  sentinel1_sample_0010.json  sentinel1_sample_0011.json  sentinel1_sample_0012.json  sentinel1_sample_0013.json  sentinel1_sample_0014.json  sentinel1_sample_0015.json  sentinel1_sample_0016.json  sentinel1_sample_0017.json  sentinel1_sample_0018.json  sentinel1_sample_0019.json  sentinel1_sample_0020.json  sentinel1_sample_0021.json  sentinel1_sample_0022.json  sentinel1_sample_0023.json  sentinel1_sample_0024.json  sentinel1_sample_0025.json  sentinel1_sample_0026.json  sentinel1_sample_0027.json  sentinel1_sample_0028.json  sentinel1_sample_0029.json  sentinel1_sample_0030.json  sentinel1_sample_0031.json  sentinel1_sample_0032.json  sentinel1_sample_0033.json  sentinel1_sample_0034.json  sentinel1_sample_0035.json  sentinel1_sample_0036.json  (+63 more)
backend/ml-models/data/processed/: dataset_info.json
backend/ml-models/notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_model_evaluation.ipynb  04_predictions_visualization.ipynb  05_satellite_data_analysis.ipynb  README.md
backend/ml-models/training/: train_change_detector.py  train_ice_classifier.py  train_lstm_predictor.py
backend/scripts/: calculate_grid_bounds.py  download_historical_visuals.py  fetch_ice_data.py  ingest_historical_data.py  seed_cache.py
(+139 files in other folders)
